--- a/Source/App/Localizable.strings
+++ b/Source/App/Localizable.strings
@@ -41,6 +41,11 @@
 "number_alert_comment" = "You have {number} clipboard items ready to replay, paste how many of them at once now?";
 "number_alert_cancel" = "Cancel";
 "number_alert_confirm" = "Paste";
+"forget_alert_message" = "Do you want to clear the current history when disabling history monitoring?";
+"forget_alert_comment" = "If you keep the clipboard items in the history, then if you turn on history monitoring in the future the current clipboard items will return.";
+"forget_alert_cancel" = "Cancel";
+"forget_alert_confirm" = "Clear";
+"forget_alert_deny" = "Keep";
 "promoteextras_menu_badge" = "PERK";
 "promoteextras_alert_message" = "Support the app's continuing development to unlock this feature?";
 "promoteextras_alert_comment" = "The button below takes you to the Support Us page of the Settings window where you can make an in-app purchase to support the makers of this app, and for doing so this and other extra features will be unlocked.";
