--- a/Source/App/Localizable.strings
+++ b/Source/App/Localizable.strings
@@ -35,17 +35,21 @@
 
 "preferences_purchase" = "Support Us";
 "accessibility_alert_show_intro" = "Reopen Intro Window";
-"first_replay_item_badge" = "replay from here";
+"first_replay_item_badge" = "next to paste";
 "menu_accessibility_description" = "Batch Clipboard Menu";
 "number_alert_message" = "Paste how many items?";
 "number_alert_comment" = "You have {number} clipboard items ready to replay, paste how many of them at once now?";
 "number_alert_cancel" = "Cancel";
 "number_alert_confirm" = "Paste";
-"forget_alert_message" = "Do you want to clear the current history when disabling history monitoring?";
-"forget_alert_comment" = "If you keep the clipboard items in the history, then if you turn on history monitoring in the future the current clipboard items will return.";
-"forget_alert_cancel" = "Cancel";
-"forget_alert_confirm" = "Clear";
-"forget_alert_deny" = "Keep";
+"reverse_order_alert_message" = "Are you sure you want to turn on detection and storage of clipboard history?";
+"reverse_order_alert_comment" = "With history turned on, opening the menu with the Option key held will show recent history, most recent at the top. Menu items displaying the current batch yet to be pasted will switch to use the sane order as the history items, most recent at the top, first to paste at the bottom.\n\nChecking for clipboard changes will happen continually in the background.";
+"reverse_order_alert_cancel" = "Cancel";
+"reverse_order_alert_confirm" = "OK";
+"erase_history_alert_message" = "Turning off clipboard history, do you want to clear the current history in the process?";
+"erase_history_alert_comment" = "With history turned off, menu items displaying the current batch yet to be pasted will switch to natural order, most recent at the bottom, first to paste at the top.\n\nYou may choose to continue storing the current clipboard items in the history, if you turn on history back on they will return, visible when opening the menu with the Option key held.";
+"erase_history_alert_cancel" = "Cancel";
+"erase_history_alert_confirm" = "Turn Off & Clear";
+"erase_history_alert_deny" = "Turn Off & Keep";
 "promoteextras_menu_badge" = "PERK";
 "promoteextras_alert_message" = "Support the app's continuing development to unlock this feature?";
 "promoteextras_alert_comment" = "The button below takes you to the Support Us page of the Settings window where you can make an in-app purchase to support the makers of this app, and for doing so this and other extra features will be unlocked.";
