--- a/Source/App/Localizable.strings
+++ b/Source/App/Localizable.strings
@@ -56,9 +56,18 @@
 "resetdata_alert_deleteandlaunch" = "Reset Data and Launch";
 "resetdata_alert_launch" = "Launch Without Reset";
 "resetdata_alert_terimnate" = "Quit";
+"delete_batch_message" = "Delete this saved batch?";
+"delete_batch_comment" = "This will remove the saved batch named “{title}” from the menu, it cannot be undone.";
+"delete_batch_alt_comment" = "This will remove the selected batch from the menu, it cannot be undone.";
+"delete_batch_confirm" = "Delete";
+"delete_batch_cancel" = "Cancel";
 "save_current_batch_alert_message" = "Save this batch?";
 "save_last_batch_alert_message" = "Save the last batch?";
 "save_batch_alert_comment" = "This batch containing {count} clip(s) will be saved to the menu to be replayed anytime later. Provide a name and optional keyboard shortcut. The name must not be blank or already used by an existing saved batch.";
 "save_batch_alert_confirm" = "Save";
 "save_batch_alert_cancel" = "Cancel";
 "save_batch_name_placeholder" = "Name required";
+"rename_batch_alert_message" = "Rename batch, or change its keyboard shortcut";
+"rename_batch_alert_comment" = "The name must not already be used by an existing saved batch.";
+"rename_batch_alert_confirm" = "Update";
+"rename_batch_alert_cancel" = "Cancel";
